# BirdView

./: .gitignore  README.md  pyproject.toml
birdview/: __init__.py  cli.py  client.py  config.py  interactive.py  render.py
tests/: test_cli.py  test_client.py  test_config.py  test_render.py
